Fix merging of record fields